--- a/style.css
+++ b/style.css
@@ -200,3 +200,72 @@ body {
     opacity: 1;
   }
 }
+
+
+.footer {
+  background-color: var(--secondary-color);
+  color: var(--secondary-text-color);
+  padding: 20px 0;
+
+
+  & a{
+    color: var(--secondary-text-color);
+    text-decoration: none;
+  }
+
+  & .socials{
+    justify-self: end;
+  }
+}
+
+/* responsive design pt tableta */
+@media (max-width: 820px) {
+  .grid {
+    grid-template-columns: 1fr;
+  }
+
+  .contact-text{
+    text-align: center;
+  }
+
+  .contact-form{
+    top: 0px;
+  }
+
+  .footer .grid{
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .technologies .card {
+    transition: none;
+
+    &:hover {
+      transform: none;
+    }
+  }
+}
+
+@media (max-width: 500px) {
+
+  .card {
+  padding: 8px;
+  margin: 4px;
+  }
+
+  .container {
+    padding: 0;
+  }
+
+  .footer {
+ grid-template-columns: 1fr;
+ justify-items: center;
+
+ & div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
+ }
+}
+}
